[tool.poetry]
name = "Dominion API"
version = "0.1.0"
description = "An API for the game Dominion"
license = "MIT"
authors = ["Ethan Saxenian <ethansaxenian@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ethansaxenian/DominionAPI"
homepage = "https://dominionapi-1-u6800667.deta.app/docs"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
python-dotenv = "^1.0.0"
deta = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
tqdm = "^4.64.1"
uvicorn = "^0.21.1"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
extend-exclude = [
    ".venv",
    ".idea",
    ".git",
    "__pycache__",
    ".ruff_cache"
]
ignore = ["E501"]
line-length = 88
select = [
    "A",
    "B",
    "C",
    "C4",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PGH",
    "PTH",
    "Q",
    "S",
    "SIM",
    "TRY",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"scrape_data.py" = ["S113"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]
