[project]
name = "dominionapi"
requires-python = ">= 3.13"
version = "0.1.0"
description = "An API for the game Dominion"
license = "MIT"
authors = ["Ethan Saxenian <ethansaxenian+github@proton.me>"]
readme = "README.md"
repository = "https://github.com/ethansaxenian/DominionAPI"
homepage = "https://dominion-api.deta.dev/docs"

dependencies = [
    "deta>=1.2.0",
    "fastapi[all]>=0.115.3",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "tqdm>=4.66.5",
]


[tool.ruff]
target-version = "py313"
extend-exclude = [
    ".venv",
    ".idea",
    ".git",
    "__pycache__",
    ".ruff_cache"
]
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "ISC001", "S311"]
select = [
    "A",
    "ANN",
    "B",
    "C",
    "C4",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PGH",
    "PTH",
    "Q",
    "S",
    "SIM",
    "TRY",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"scrape_data.py" = ["S113"]
"seed_db.py" = ["S310"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

